# ShopMod

./: .env.example  .gitignore  .isort.cfg  LICENSE  README.md  debug_auth.py  format.bat  pyproject.toml  requirements.txt
blog/: cache_utils.py  forms.py  models.py  urls.py  views.py
blog/management/commands/: setup_content_manager_group.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
config/: settings.py  urls.py
products/: cache_utils.py  forms.py  models.py  services.py  urls.py  views.py
products/management/commands/: clear_cache.py  clear_product_cache.py  setup_moderator_group.py
products/migrations/: 0001_initial.py  0002_alter_product_options_product_is_published_and_more.py  0002_product_price.py  0003_alter_product_options_product_owner.py  0003_product_image.py  0004_category_product_category.py
products/templates/products/: base.html  category_list.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products_by_category.html  test.html
products/templates/registration/: login_required.html
static/css/: style.css
users/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_is_active_and_more.py
users/templates/users/: login.html  profile.html  profile_edit.html  register.html
users/templates/users/emails/: welcome_email.html
