[tool.poetry]
name = "shopmod"
version = "0.1.0"
description = ""
authors = ["Anton Tumashov <Tumashovster@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry-core = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]
