[tool.poetry]
name = "shopmod"
version = "0.1.0"
description = ""
authors = ["Anton Tumashov <Tumashovster@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry-core = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  | .venv
  | env
  | migrations
  | .git
  | .hg
  | .mypy_cache
  | .tox
  | .venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["products", "config"]
skip = [".venv", "env", "migrations"]